@@ -20,14 +20,17 @@
 
 This is a base class for CPU components.
 
-<p>Implemented CPUs include:
-
+<p>Examples of CPUs include:
 <ul>
 	<li><a href="component_m88k_cpu.html"><tt>m88k_cpu</tt></a>
 	<li><a href="component_mips_cpu.html"><tt>mips_cpu</tt></a>
 </ul>
 
 
-<hr>
+<p>
+Source code documentation for this component can be found
+<a href="../doxygen/html/classCPUComponent.html">here</a>.
+
+<p><br><hr>
 </body>
 </html>
