@@ -29,6 +29,11 @@ This component represents a
 
 <p>TODO: Almost everything.
 
-<hr>
+
+<p>
+Source code documentation for this component can be found
+<a href="../doxygen/html/classMIPS__CPUComponent.html">here</a>.
+
+<p><br><hr>
 </body>
 </html>
