@@ -49,6 +49,7 @@ Available template machines:
 <p><table border=0>
 <tr>
  <td><b><u>Machine&nbsp;name:</u></b>&nbsp;&nbsp;</td>
+ <td><b><u>Screenshot:</u></b>&nbsp;&nbsp;</td>
  <td><b><u>Status:</u></b>&nbsp;&nbsp;</td>
  <td><b><u>Description:</u></b>&nbsp;&nbsp;</td>
  <td><b><u>Comments:</u></b>&nbsp;&nbsp;</td>
@@ -58,11 +59,12 @@ Available template machines:
  <td></td></tr>
 <tr bgcolor=#e0e0e0>
  <td valign=top><a href="machines/machine_mvme187.html"><tt>mvme187</tt></a></td>
+ <td valign=top align=center><tt></tt></td>
  <td valign=top>experimental&nbsp;&nbsp;</td>
  <td valign=top>MVME187 machine.<pre>  (unnamed machine)  [MVME187]
-  \-- mainbus0
-      |-- ram0  (64 MB at offset 0)
-      |-- rom0  (4 MB at offset 0xff800000)
+  \-- <a href="components/component_mainbus.html">mainbus0</a>
+      |-- <a href="components/component_ram.html">ram0</a>  (64 MB at offset 0)
+      |-- <a href="components/component_ram.html">rom0</a>  (4 MB at offset 0xff800000)
       \-- <a href="components/component_m88k_cpu.html">cpu0</a>  (88100, 50 MHz)
 </pre></td>
  <td valign=top>For experiments with OpenBSD/mvme88k.</td>
@@ -72,11 +74,12 @@ Available template machines:
  <td></td></tr>
 <tr bgcolor=#f0f0f0>
  <td valign=top><a href="machines/machine_testm88k.html"><tt>testm88k</tt></a></td>
+ <td valign=top align=center><tt><a href=machines/machine_testm88k.png><img src=machines/machine_testm88k-thumb.png></a></tt></td>
  <td valign=top>stable&nbsp;&nbsp;</td>
  <td valign=top>Experimental M88K machine.<pre>  (unnamed machine)  [testm88k]
-  \-- mainbus0
-      |-- ram0  (32 MB at offset 0)
-      |-- rom0  (4 MB at offset 0xff800000)
+  \-- <a href="components/component_mainbus.html">mainbus0</a>
+      |-- <a href="components/component_ram.html">ram0</a>  (32 MB at offset 0)
+      |-- <a href="components/component_ram.html">rom0</a>  (4 MB at offset 0xff800000)
       \-- <a href="components/component_m88k_cpu.html">cpu0</a>  (88100, 50 MHz)
 </pre></td>
  <td valign=top></td>
@@ -86,11 +89,12 @@ Available template machines:
  <td></td></tr>
 <tr bgcolor=#e0e0e0>
  <td valign=top><tt>testmips</tt></td>
+ <td valign=top align=center><tt></tt></td>
  <td valign=top>experimental&nbsp;&nbsp;</td>
  <td valign=top>Experimental MIPS machine.<pre>  (unnamed machine)  [testmips]
-  \-- mainbus0
-      |-- ram0  (32 MB at offset 0)
-      |-- rom0  (16 MB at offset 0x1fc00000)
+  \-- <a href="components/component_mainbus.html">mainbus0</a>
+      |-- <a href="components/component_ram.html">ram0</a>  (32 MB at offset 0)
+      |-- <a href="components/component_ram.html">rom0</a>  (16 MB at offset 0x1fc00000)
       \-- <a href="components/component_mips_cpu.html">cpu0</a>  (5KE, 100 MHz)
 </pre></td>
  <td valign=top></td>
@@ -99,6 +103,6 @@ Available template machines:
 </table><p>
 
 
-<hr>
+<p><br><hr>
 </body>
 </html>
