@@ -20,9 +20,9 @@
 
 <!-- This file is AUTOMATICALLY GENERATED! Do not edit. -->
 <pre>  (unnamed machine)  [MVME187]
-  \-- mainbus0
-      |-- ram0  (64 MB at offset 0)
-      |-- rom0  (4 MB at offset 0xff800000)
+  \-- <a href="../components/component_mainbus.html">mainbus0</a>
+      |-- <a href="../components/component_ram.html">ram0</a>  (64 MB at offset 0)
+      |-- <a href="../components/component_ram.html">rom0</a>  (4 MB at offset 0xff800000)
       \-- <a href="../components/component_m88k_cpu.html">cpu0</a>  (88100, 50 MHz)
 </pre>
 The <tt>mvme187</tt> machine is a
